...

export interface ProjectsTableProps {
  className?: string;
  projects: ProjectCardFragment[];
}

export const ProjectsTable = (
  props: ProjectsTableProps,
): React.ReactElement => {
  const { className, projects } = props;

  // Hooks
  const columns = React.useMemo(() => ProjectsTable.buildTable(), []);
...
